GEM-19 Add MovieHandler as same as ProposalHandler
