# internal/gemstone/global/proposal.struct.go
@@ -10,32 +10,32 @@ type (
 		Offset int `json:"offset"`
 	}
 	FindManyProposalRes struct {
-		Success   bool               `json:"success,omitempty"`
-		Proposals []*domain.Proposal `json:"proposals,omitempty"`
+		Success   bool               `json:"success"`
+		Proposals []*domain.Proposal `json:"proposals"`
 	}
 
 	FindProposalReq struct {
-		CID string `json:"cid,omitempty"`
+		CID string `json:"cid"`
 	}
 
 	FindProposalRes struct {
-		Success  bool             `json:"success,omitempty"`
-		Proposal *domain.Proposal `json:"proposal,omitempty"`
+		Success  bool             `json:"success"`
+		Proposal *domain.Proposal `json:"proposal"`
 		Err      error            `json:"err"`
 	}
 
 	StoreProposalReq struct {
-		GenreID                 uint      `json:"genre_id,omitempty"`
-		MakerID                 uint      `json:"maker_id,omitempty"`
-		ContentID               string    `json:"content_id,omitempty"`
-		ThumbnailURI            string    `json:"thumbnail_uri,omitempty"`
-		DocumentURI             string    `json:"document_uri,omitempty"`
-		Title                   string    `json:"title,omitempty"`
-		Description             string    `json:"description,omitempty"`
-		TargetPrice             uint64    `json:"target_price,omitempty"`
+		GenreID                 uint      `json:"genre_id"`
+		MakerID                 uint      `json:"maker_id"`
+		ContentID               string    `json:"content_id"`
+		ThumbnailURI            string    `json:"thumbnail_uri"`
+		DocumentURI             string    `json:"document_uri"`
+		Title                   string    `json:"title"`
+		Description             string    `json:"description"`
+		TargetPrice             uint64    `json:"target_price"`
 		Deadline                time.Time `json:"deadline"`
 		ExpectedReleaseYear     time.Time `json:"expected_release_year"`
-		EstimatedProductionTime string    `json:"estimated_production_time,omitempty"`
+		EstimatedProductionTime string    `json:"estimated_production_time"`
 	}
 
 	StoreProposalRes struct {
